  * Minor Enhancements
    * Added post categories based on directories containing _posts [github.com/mreid]
    * Added new date filter that shows the full month name [github.com/mreid]
    * Make post's YAML front matter available as post.data [github.com/remi]
    * Merge Post's YAML front matter into its to_liquid payload [github.com/remi]
  * Bug Fixes
    * Change YAML delimiter matcher so as to not chew up 2nd level markdown headers [github.com/mreid]
    * Fix bug that meant page data (such as the date) was not available in templates [github.com/mreid]
    * Properly reject directories in _layouts

== 0.2.1 / 2008-12-15
  * Major Changes
    * Use Maruku (pure Ruby) for Markdown by default [github.com/mreid]
    * Allow use of RDiscount with --rdiscount flag
  * Minor Enhancements
    * Don't load directory_watcher unless it's needed [github.com/pjhyett]

== 0.2.0 / 2008-12-14
  * Major Changes
    * related_posts is now found in site.related_posts

== 0.1.6 / 2008-12-13
  * Major Features
    * Include files in _includes with {% include x.textile %}

== 0.1.5 / 2008-12-12
  * Major Features
    * Code highlighting with Pygments if --pygments is specified
    * Disable true LSI by default, enable with --lsi
  * Minor Enhancements
    * Output informative message if RDiscount is not available [github.com/JackDanger]
  * Bug Fixes
    * Prevent Jekyll from picking up the output directory as a source [github.com/JackDanger]
    * Skip related_posts when there is only one post [github.com/JackDanger]

== 0.1.4 / 2008-12-08
  * Bug Fixes
    * DATA does not work properly with rubygems

== 0.1.3 / 2008-12-06
  * Major Features
    * Markdown support [github.com/vanpelt]
    * Mephisto and CSV converters [github.com/vanpelt]
    * Code hilighting [github.com/vanpelt]
    * Autobuild
  * Bug Fixes
    * Accept both \r\n and \n in YAML header [github.com/vanpelt]

== 0.1.2 / 2008-11-22
  * Major Features