@@ -6,6 +6,7 @@
     * Added new date filter that shows the full month name [github.com/mreid]
     * Make post's YAML front matter available as post.data [github.com/remi]
     * Merge Post's YAML front matter into its to_liquid payload [github.com/remi]
+    * Restrict includes to regular files underneath _includes
   * Bug Fixes
     * Change YAML delimiter matcher so as to not chew up 2nd level markdown headers [github.com/mreid]
     * Fix bug that meant page data (such as the date) was not available in templates [github.com/mreid]
